# legal-rag-agent

./: .env.example  .gitignore  README.md  README.zh-CN.md  SECURITY.md  TASKS.md  TODO.md  pyproject.toml  requirements.environment.txt
configs/: default.yaml
docs/: agent_system_plan_zh.md  architecture.md  architecture_zh.md
reports/: title12_agent_demo.md  title12_agent_demo_trace.json  title12_agent_validation.md  title12_context_retrieval_eval.md  title12_tools_validation.md
scripts/: ablate_title12_development_retrieval.py  analyze_title12_development_retrieval_failures.py  annotate_title12_development_qa_metrics.py  apply_title12_eval_review_decisions.py  ask_agent.py  audit_title12_alignment.py  audit_title12_eval_candidates.py  benchmark_title12_gpu.py  build_title12_canonical_corpus.py  build_title12_chunks.py  build_title12_gpu_index.py  chat.py  compare_title12_retrieval.py  demo_title12_agent.py  environment_smoke_test.py  evaluate.py  evaluate_title12_agent_process.py  evaluate_title12_context_retrieval.py  evaluate_title12_development_retrieval.py  evaluate_title12_hybrid_retrieval.py  evaluate_title12_llm_judge.py  finalize_title12_retrieval_eval.py  generate_title12_development_qa_draft.py  prepare_title12_retrieval_eval.py  recover_legacy_title12.py  sample_title12_eval_candidates.py  sample_title12_eval_deficit_replacements.py  sample_title12_eval_replacements.py  validate_ecfr_snapshot.py  validate_title12_agent.py  validate_title12_development_qa.py  validate_title12_tools.py
tests/: test_ablate_title12_development_retrieval.py  test_agent.py  (+32 more)
(+18 files in other folders)
