[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-law"
version = "0.1.0"
description = "A reproducible legal RAG core extracted from the rag_law experiment"
requires-python = ">=3.10"
dependencies = [
  "faiss-cpu>=1.8",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "requests>=2.31",
  "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
